fix birdy scale on firefox

--- a/stylus/birdy.styl
+++ b/stylus/birdy.styl
@@ -13,6 +13,7 @@
 .birdy
   width: (387 / 2)px
   height: (285 / 2)px
+  margin-bottom: 35px
 
   .bird
     animation: birdy-bird both 3s infinite
@@ -22,4 +23,4 @@
     height: 20px
     width: 80px
     margin-left: 42px
-    margin-top: 5px
+    margin-top: 4px
