--- a/stylus/form.styl
+++ b/stylus/form.styl
@@ -197,9 +197,9 @@ html.form
 
   .birdy
     position: absolute
-    left: -60px
-    top: 40px
-    zoom: 0.75
+    left: -70px
+    top: 15px
+    transform: scale(0.75)
 
     @media PHONE
       display: none
