--- a/stylus/view.styl
+++ b/stylus/view.styl
@@ -3,8 +3,9 @@
 body.home
   .birdy
     float: left
-    margin-right: 40px
-    zoom: 0.8
+    margin-top: -10px
+    margin-right: 30px
+    transform: scale(0.85)
 
   .hero .totalHits
     display: inline-block
